[gd_scene load_steps=48 format=2]

[ext_resource path="res://Sprites/SpriteSheets/Objects/Sprite-object-fire-trap.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Environment/FlameTrap/FlameTrap.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Weapons/WeaponBase/Hitbox.gd" type="Script" id=3]
[ext_resource path="res://Sprites/SpriteSheets/Objects/Sprite-object-fire-trap_fire.png" type="Texture" id=4]
[ext_resource path="res://SFX/Environment/firetrap.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 680, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 440, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 520, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 560, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 40, 120 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": false,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": false,
"name": "disabled",
"speed": 1.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "activate",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 280, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 440, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 520, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 560, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 40, 120 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 120 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": false,
"name": "disabled",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=25]

[sub_resource type="Animation" id=23]
resource_name = "Activate"
length = 3.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("..:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "activate" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3, 3.15, 3.3, 3.45, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 5, 6, 9, 10, 11, 12, 9, 10, 11, 12, 11, 12, 13, 14, 15, 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hitbox1/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitbox2/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.65, 3.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Flame:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Flame:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3, 3.15, 3.3, 3.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 7, 8, 9, 10, 11, 12, 9, 10, 11, 12, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "activate" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hitbox1/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitbox2/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Flame:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Flame:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../AudioStreamPlayer2D:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="FlameTrap" type="AnimatedSprite"]
frames = SubResource( 18 )
animation = "activate"
offset = Vector2( 0, 25 )
script = ExtResource( 2 )

[node name="Flame" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 44 )
offset = Vector2( 0, 25 )

[node name="Hitbox1" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )
weapon_hitbox = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox1"]
position = Vector2( 0, 26 )
shape = SubResource( 25 )
disabled = true

[node name="Hitbox2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )
weapon_hitbox = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox2"]
position = Vector2( 0, 62 )
shape = SubResource( 25 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Timer")
anims/Activate = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 4.0
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
